samples/_failures_safe/1761475878_ae16d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_941be7be.c: In function ‘main’:
./samples/SAFE/__tmp_941be7be.c:135:1: error: expected declaration or statement at end of input
  135 | int main(void) {
      | ^~~
